<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">coco</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_messenger">MessengerActivity</string>
    <string name="title_activity_book_manager">BookManagerActivity</string>
    <string name="title_activity_provider">ProviderActivity</string>
    <string name="title_activity_tcpserver">TCPServerActivity</string>
    <string name="title_activity_tcpclient">TCPClientActivity</string>
    <string name="title_activity_binder_pool">BinderPoolActivity</string>
    <string name="remote_view_title_scene_1">第5章 remote view 场景1</string>
    <string name="remote_view_title_scene_2">"第5章 remote view  场景2"</string>
    <string name="next">下一个</string>
    <string name="lorem_ipsum">这是第一个程序页面</string>
    <string name="previous">上一页</string>
    <string name="first_fragment_label">首个fragment label</string>
    <string name="second_fragment_label">第2个fragment label</string>
    <string name="action_settings">settings</string>
    <string name="ipc2">ipc2</string>
    <string name="view_event3">view_event3</string>
    <string name="view_principle4">view_principle4</string>
    <string name="view_remote5">view_remote5</string>
    <string name="drawable6">drawable6</string>
    <string name="animal7">animal7</string>
    <string name="window8">window8</string>
    <string name="bitmap12">bitmap12</string>
    <string name="thread_poll11">thread_poll11</string>
    <string name="custom_notification_msg">自定义通知使用remote发送消息-上方消息</string>
    <string name="custom_notification_msg_down">自定义空间使用remote发送消息-下方消息</string>
    <string name="remote_view_send_msg">发送消息</string>
    <string name="notification_bar">通知栏消息</string>
    <string name="send_simu_notification_bar">发送模拟通知栏消息</string>
    <string name="show_normal_notification">发送通用提示消息</string>
    <string name="show_custom_notification">自定义提示消息</string>
    <string name="btn_animal_large">Button会变长</string>
    <string name="book_name_1">android 开发艺术探索</string>
    <string name="book_name_2">android 应用开发实践教程</string>
    <string name="data_picker_title">picker选择器</string>
    <string name="co_main">co示例</string>
    <string name="fo_main">fo示例</string>
    <string name="fragment_demo">fragment示例</string>
    <string name="sql_demo">sql示例</string>
    <string name="service_demo">services示例</string>
    <string name="view_contents">从模拟发送收到的消息</string>

</resources>
