<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context="com.ch.co.CoMainActivity">

    <Button
        android:id="@+id/ipc2"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_margin="15dp"
        android:background="@drawable/rounded_theme_background"
        android:text="@string/ipc2"
       app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>

    <Button
        android:id="@+id/view_event3"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_margin="25dp"
        android:background="@drawable/rounded_theme_background"
        app:layout_constraintTop_toBottomOf="@+id/ipc2"
        android:text="@string/view_event3"/>

    <Button
        android:id="@+id/view_principle4"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_margin="25dp"
        android:background="@drawable/rounded_theme_background"
        app:layout_constraintTop_toBottomOf="@+id/view_event3"
        android:text="@string/view_principle4"/>

    <Button
        android:id="@+id/view_remote5"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_margin="25dp"
        android:background="@drawable/rounded_theme_background"
        app:layout_constraintTop_toBottomOf="@+id/view_principle4"
        android:text="@string/view_remote5"/>

    <Button
        android:id="@+id/drawable6"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_margin="25dp"
        android:background="@drawable/rounded_theme_background"
        app:layout_constraintTop_toBottomOf="@+id/view_remote5"
        android:text="@string/drawable6"/>

    <Button
        android:id="@+id/animal7"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_margin="25dp"
        android:background="@drawable/rounded_theme_background"
        app:layout_constraintTop_toBottomOf="@+id/drawable6"
        android:text="@string/animal7"/>

    <Button
        android:id="@+id/window8"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_margin="25dp"
        android:background="@drawable/rounded_theme_background"
        app:layout_constraintTop_toBottomOf="@+id/animal7"
        android:text="@string/window8"/>

    <Button
        android:id="@+id/thread_poll11"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_margin="25dp"
        android:background="@drawable/rounded_theme_background"
        app:layout_constraintTop_toBottomOf="@id/window8"
        android:text="@string/thread_poll11"/>

    <Button
        android:id="@+id/bitmap12"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_margin="25dp"
        android:background="@drawable/rounded_theme_background"
        app:layout_constraintTop_toBottomOf="@+id/thread_poll11"
        android:text="@string/bitmap12"/>

</androidx.constraintlayout.widget.ConstraintLayout>