<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context="com.ch.fo.FoMainActivity">

    <Button
        android:id="@+id/sql_demo"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_margin="25dp"
        android:background="@color/light_green"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:text="@string/sql_demo"/>

    <Button
        android:id="@+id/fragment_demo"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_margin="25dp"
        android:background="@color/light_green"
        app:layout_constraintTop_toBottomOf="@+id/sql_demo"
        app:layout_constraintStart_toStartOf="parent"
        android:text="@string/fragment_demo"/>

    <Button
        android:id="@+id/service_demo"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_margin="25dp"
        android:background="@color/light_green"
        app:layout_constraintTop_toBottomOf="@+id/fragment_demo"
        app:layout_constraintStart_toStartOf="parent"
        android:text="@string/service_demo"/>

</androidx.constraintlayout.widget.ConstraintLayout>